@@ -6,8 +6,10 @@
   "dependencies": {
     "@stomp/stompjs": "^5.4.2",
     "axios": "^0.19.0",
+    "bootstrap": "^4.4.1",
     "node-sass": "^4.13.0",
     "react": "^16.11.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.1",
     "react-scripts": "3.2.0",
