@@ -1,4 +1,5 @@
 import React from "react";
+import Button from 'react-bootstrap/Button';
 
 const SummaryPageHeader = ({ selectSensor, summary, isLoading }) => {
   return (
@@ -9,15 +10,16 @@ const SummaryPageHeader = ({ selectSensor, summary, isLoading }) => {
         <div>
           
           {summary.map((sum, index) => (
-            <button
+            <Button
               key={index}
+              variant={"primary"}
               className={"summarySensorSelector"}
               onClick={() => {
                 selectSensor(index);
               }}
             >
               {sum.roomName}
-            </button>
+            </Button>
           ))}
         </div>
       )}
