@@ -70,6 +70,7 @@ footer{
   width: 100%;
 }
 
+
 .page{
   display: flex;
   align-items: center;
